--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Your awesome title
+title: Puck
 email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "The gypsy swing folk quintet who bring the forest back into the city. Lovingly created to serenade and enchant you and tangle your feet!"
 twitter_username: jekyllrb
 github_username:  jekyll
-baseurl: "/freelancer-theme"
+baseurl: "/puck"
 
 # Build settings
 markdown: kramdown
